app/src/main/java/com/example/webtonative/core/domain/util/error/FirebaseAuthError.kt
package com.example.webtonative.core.domain.util.error

sealed interface FirebaseError: Error {
    enum class AuthError: FirebaseError {
        UNKNOWN
    }
}